restore tests