@@ -1,7 +1,7 @@
 package org.honton.chas.analyzer.asm;
 
 /*
- * Licensed to the Apache Software Foundation (ASF) under one
+ * Licensed to the Apache Software Foundation (ASF) under on
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
  * regarding copyright ownership.  The ASF licenses this file
@@ -19,8 +19,11 @@ package org.honton.chas.analyzer.asm;
  * under the License.
  */
 
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Set;
 import org.apache.maven.plugin.logging.Log;
@@ -35,12 +38,13 @@ class AsmDependencyAnalyzerTest {
   @Mock Log log;
 
   @Test
-  void test() {
-    URL jarUrl = this.getClass().getResource("/org/objectweb/asm/ClassReader.class");
+  void test() throws URISyntaxException {
+    URL jarUrl = getClass().getResource("/org/objectweb/asm/ClassReader.class");
     Assertions.assertNotNull(jarUrl);
-    String fileUrl = jarUrl.toString().substring("jar:".length(), jarUrl.toString().indexOf("!/"));
-
-    Map<String, Set<String>> result = analyzer.analyze(Path.of(fileUrl), log);
+    String schemeSpecificPart = jarUrl.toURI().getSchemeSpecificPart();
+    String jarLocation = schemeSpecificPart.substring(0, schemeSpecificPart.indexOf('!'));
+    Path filePath = Paths.get(new URI(jarLocation));
+    Map<String, Set<String>> result = analyzer.analyze(filePath, log);
     Assertions.assertFalse(result.isEmpty());
   }
 }
